# caiowoot

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  caiowoot.service  deploy.sh  docker-compose.yml  pyproject.toml
app/: auth.py  config.py  database.py  main.py  models.py  websocket_manager.py
app/routes/: admin.py  health.py  (+13 more)
knowledge/: curso-ab-avancado.md  curso-ai-influencers.md  curso-atracao.md  curso-cdo.md  curso-llm.md  curso-zero-a-analista.md  playbook-vendas.md  precos.md
openspec/: war-room-proposal.md  war-room-report.md
scripts/: backup.sh
tests/: conftest.py  test_admin.py  test_admin_routes.py  test_api_integration.py  test_attachment_suggestion.py  test_auth.py  test_auto_qualifying.py  test_campaigns.py  test_classify_conversation.py  test_cold_rewarm_routes.py  test_cold_triage_candidates.py  test_cold_triage_classify.py  test_cold_triage_compose_and_cap.py  test_cold_triage_ja_comprou.py  test_cold_triage_matrix.py  test_context_panel.py  test_conversation_analysis.py  test_conversation_read_status.py  test_draft_engine.py  test_draft_engine_config.py  test_draft_engine_learning.py  test_knowledge.py  test_knowledge_admin.py  test_learned_rules.py  test_login.py  test_message_sender.py  test_middleware.py  test_operator_coaching.py  test_operator_identity.py  test_operator_profile.py  test_plumbing_operator.py  test_proactive_suggest.py  test_prompt_config.py  test_regenerate.py  test_regenerate_with_partial_response.py  test_review.py  test_rewarm_auto_send.py  test_rewarm_bandit.py  test_rewarm_cron.py  test_rewarm_engine.py  (+15 more)
(+293 files in other folders)
